cambios de las rutas de la api como se llaman y informacion correcta

--- a/src/components/Sidebar/NavigationMenu.astro
+++ b/src/components/Sidebar/NavigationMenu.astro
@@ -27,9 +27,9 @@ const menuItems = [
     badge: 'Doc'
   },
   { 
-    name: 'Categorías de Materiales', 
+    name: 'Categorías de Elementos', 
     icon: 'package', 
-    url: '/categoria-material',
+    url: '/categoria-elementos',
     badge: 'Doc'
   },
   { 
